# MPP---backend

./: README.md
backend/: .gitignore  Cargo.toml  appsettings.json  render.yaml
backend/.ebextensions/: 01_environment.config
backend/.elasticbeanstalk/: config.yml
backend/src/: main.rs  mock_data.rs  models.rs
backend/src/db/: connection.rs  insert_categories.sql  insert_products.sql  mod.rs  models.rs  repository.rs  schema.rs
backend/tests/: lib.rs
