[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4"
actix = "0.13"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
actix-cors = "0.6"
actix-files = "0.6"
actix-multipart = "0.6"
dotenv = "0.15"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
config = "0.13"

[[bin]]
name = "backend"
path = "src/main.rs"

[dev-dependencies]
actix-test = "0.1.0"
